# oasis-greenhouse

./: .gitignore  CLAUDE.md  README.md  deploy-agent.sh  deploy-all.sh  deploy-backend.sh  deploy-frontend.sh  deploy-simulation.sh  docker-compose.yml  verify-deployment.sh
backend/: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
backend/backend/: graph.py  main.py  sim_client.py
backend/docs/: ARCHITECTURE.md  BACKEND-SUMMARY.md  FEATURES.md  LEARNING-SYSTEM.md  PROMPTS.md  SIM-ENGINE-API.md  STATE-MODEL.md  STRATEGY-INITIAL.md
backend/src/: __init__.py  bridge_client.py  config.py  graph.py  main.py  sim_client.py
backend/strategy/: current_strategy.md
backend/tests/: conftest.py  test_config.py  test_graph.py  test_kb_cache.py  test_kb_client.py  test_llm.py  test_main.py  test_models.py  test_nodes.py  test_prompts.py  test_sim_client.py  test_snapshot.py  test_strategy_store.py
simulation/: Dockerfile  IMPLEMENTATION-NOTES.md  SETUP.md  SIMULATION-SPEC.md  SPEC-ADDITIONS.md  pyproject.toml  query_mcp.py
simulation/docs/: SIMULATION-SPEC.md
simulation/kb_data/: all_responses.json  domain_1_mars.json  domain_2_cea.json  domain_3_crops.json  domain_4_stress.json  domain_5_nutrition.json  domain_6_scenarios.json  domain_7_earth.json  init.json  tools.json
simulation/src/: config.py  crops.py  environment.py  events.py  feeding.py  main.py  models.py  resources.py  simulation.py  slots.py  zones.py
simulation/tests/: conftest.py  test_config.py  test_crops.py  test_environment.py  test_events.py  test_feeding.py  test_models.py  (+4 more)
(+372 files in other folders)
