[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mars-greenhouse-backend"
version = "0.1.0"
description = "Backend orchestrator + agent logic for Mars Greenhouse AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.45",
    "langchain-core>=0.3.15",
    "boto3>=1.35.36",
    "botocore>=1.35.36",
    "httpx>=0.27.2",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
