[project]
name = "mars-greenhouse-simulation"
version = "0.1.0"
description = "Stateless greenhouse simulation engine for Mars mission"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.27.2",
]
